modified:   war.html 	deleted:    War.js 	deleted:    war.cs 	css/ 	js/

--- a/war.html
+++ b/war.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <href stylesheet="war.cs"></href>
+    <link href="css/card-library/css/cardstarter.css" rel="stylesheet" type="text/css" />
+    <link href="war.cs" rel="stylesheet" type="text/css"/>
     <script src = "War.js"></script>
 </head>
 <body>
-    <header>I De-Clare War!!</header>
+    <header>
+    <h1>I De-Clare War!!</h1>
     <h3> I declare war is a staple card game that is enjoyed by many. The goal is to take all of your opponents' cards and collect the full deck back. Points can also be gained and it can be played based on rounds instead for a quicker version of the game.</h3>
-
+    </header>
 </body>
 </html>
