--- a/war.html
+++ b/war.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="css/card-library/css/cardstarter.css" rel="stylesheet" type="text/css" />
-    <link href="war.css" rel="stylesheet" type="text/css"/>
-    <script src = "War.js"></script>
+    <link href="css/war.css" rel="stylesheet" type="text/css"/>
+    <script src = "js/War.js"></script>
 </head>
 <body>
     <header>
