modified:   war.html

--- a/war.html
+++ b/war.html
@@ -29,6 +29,7 @@
 
 <!-- Player chooses how many computers to play against -->
     <hgroup>
+        <h4>Select your players</h4>
     <div class="dropdown">
         <button onclick="myFunction()" class="dropbtn">Players</button>
         <div id="myDropdown" class="dropdown-content">
@@ -40,6 +41,7 @@
     </hgroup>
     <!-- Player chooses how many rounds -->
     <hgroup>
+        <h4>How many rounds?</h4>
     <div class="dropdown">
         <button onclick="myFunction()" class="dropbtn">Rounds</button>
         <div id="myDropdown" class="dropdown-content">
