modified:   js/War.js 	modified:   war.html 	modified:   css/war.css

--- a/war.html
+++ b/war.html
@@ -57,7 +57,7 @@
         <label for="30">30</label>
       <br><br>
 
-    <button>Start Game!</button>
+    <button id="start">Start Game!</button>
     
 </body>
 </html>
