modified:   js/War.js 	modified:   war.html

--- a/war.html
+++ b/war.html
@@ -9,6 +9,7 @@
     <script src = "js/War.js"></script>
 </head>
 <body>
+
     <header>
     <h1>I De-Clare War!!</h1>
     <h3> I declare war is a staple card game that is enjoyed by many. The goal is to take all of your opponents' cards and collect the full deck back. Points can also be gained and it can be played based on rounds instead for a quicker version of the game.</h3>
@@ -60,4 +61,9 @@
     <button id="start">Start Game!</button>
     
 </body>
+<!-- <object id="original-deck-container" class="card-container"></object>
+<section id="shuffled-deck-container" class="card-container"></section>
+<section id="joker-deck-container" class="card-container"></section>
+<section id="shuffled-joker-deck-container" class="card-container"></section> -->
+
 </html>
