--- a/war.html
+++ b/war.html
@@ -3,67 +3,105 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="css/card-library/css/cardstarter.css" rel="stylesheet" type="text/css" />
+    <title>War (Project 1) </title>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <link href="css/card-library/css/cardstarter.min.css" rel="stylesheet" type="text/css" />
     <link href="css/war.css" rel="stylesheet" type="text/css"/>
-    <script src = "js/War.js"></script>
+    <script defer src = "js/War.js"></script>
 </head>
+
+
 <body>
 
-    <header>
-    <h1>I De-Clare War!!</h1>
-    <h3> I declare war is a staple card game that is enjoyed by many. The goal is to take all of your opponents' cards and collect the full deck back. Points can also be gained and it can be played based on rounds instead for a quicker version of the game.</h3>
-    </header>
+    <div id='header' >
+        <h2>I De-Clare War!!</h1>
+        <h3> I declare war is a staple card game that is enjoyed by many. The goal is to take all of your opponents' cards and collect the full deck back. Points can also be gained and it can be played based on rounds instead for a quicker version of the game.</h3>
+    </div>
+    <div id="boardwrap">
 
     <!-- Allows players to select the style of play that they would like. -->
-    <article>
-        <h4>Select your ruleset</h4>
-    <ul>
-    <li><input type = "checkbox" id = "Grid" >
-    <label for="Grid">Pick the cards you play instead of just the one on the top deck</label></li>
-    <li><input type = "checkbox" id = "Jokers" >
-    <label for="Jokers">Play with jokers in the deck that beat every other card</label></li>
-    <li><input type = "checkbox" id = "Twos" >
-    <label for="Twos">Once the lowest card it rises to take out the aces but still falls to everything else</label></li>
-    </ul>
-    </article>
+        <!-- <div id = "ruleSet">
+            <h4>Select your ruleset</h4>
+            <ul>
+                <li><input type = "checkbox" id = "Grid" >
+                <label for="Grid">Pick the cards you play instead of just the one on the top deck</label></li>
+                <li><input type = "checkbox" id = "Jokers" >
+                <label for="Jokers">Play with jokers in the deck that beat every other card</label></li>
+                <li><input type = "checkbox" id = "Twos" >
+                <label for="Twos">Once the lowest card it rises to take out the aces but still falls to everything else</label></li>
+            </ul>
+        </div> -->
 
-<!-- Player chooses how many computers to play against -->
-    <hgroup>
-        <h4>Select your players</h4>
-            <label for="players">Number of Players:</label>
+        <!-- Player chooses how many computers to play against -->
+        <!-- <div id="numPlayers">
+            <h4>Select your players</h4>
+                <label for="players">Number of Players:</label>
 
-              <input type= "radio" id="players" value="2">
-              <label for="1">2</label>
-              <input type= "radio" id="players" value="3">
-              <label for="1">3</label>
-              <input type= "radio" id="players" value="4">
-              <label for="1">4</label>
-            <br><br>
-    </hgroup>
-    <!-- Player chooses how many rounds -->
-    <hgroup>
-        <h4>How many rounds</h4>
-        <label for="rounds">Number of Rounds:</label>
+                  <input type= "radio" id="player" value="2" name ="players">
+                  <label for="1">2</label>
+                  <input type= "radio" id="player" value="3" name ="players">
+                  <label for="1">3</label>
+                  <input type= "radio" id="player" value="4" name ="players">
+                  <label for="1">4</label> -->
 
-        <input type= "radio" id="rounds" value="10">
-        <label for="10">10</label>
-        <input type= "radio" id="rounds" value="15">
-        <label for="15">15</label>
-        <input type= "radio" id="rounds" value="20">
-        <label for="20">20</label>
-        <input type= "radio" id="rounds" value="25">
-        <label for="25">25</label>
-        <input type= "radio" id="rounds" value="30">
-        <label for="30">30</label>
-      <br><br>
+        <!-- </div>
+        Player chooses how many rounds
+        <!-- <div id="numRounds">
+            <h4>How many rounds</h4>
+            <label for="rounds">Number of Rounds:</label>
 
-    <button id="start">Start Game!</button>
+                <input type= "radio" id="round" value="10" name = 'radio'>
+                <label for="10">10</label>
+                <input type= "radio" id="round" value="15" name = 'radio'>
+                <label for="15">15</label>
+                <input type= "radio" id="round" value="20" name = 'radio'>
+                <label for="20">20</label>
+                <input type= "radio" id="round" value="25" name = 'radio'>
+                <label for="25">25</label>
+                <input type= "radio" id="round" value="30" name = 'radio'>
+                <label for="30">30</label>
+         -->
+        <!-- </div> --> -->
+
+        <button id="start" onclick="renderBoard()">Start Game!</button>
+
+
+
+    </div>
+    </div>   
+
+        <div id='gameboard' style="display: none">
+            <div>
+
+                <div class="gameHeader">
+                    <div class="playCount"></div>
+                    <div class="result"></div>
+                    <div class="compCount"></div>
+                </div><!--End gameHeader div -->
+
+                <div class="gameBoard">
+                    <div class="playerDeck"><img src=css/card-library/images/backs/red.svg></div>
+                    <div class="playerCard"></div>
+                    <div class="middleGround">
+                        <button class="deal" onclick="deal()">DEAL</button><br>
+                        <button class="newGame" onclick="location.reload()">NEW GAME</button>
+                    </div><!-- End middleGround div -->
+                    <div class="compCard"></div>
+                    <div class="compDeck"><img src=css/card-library/images/backs/red.svg></div>
+                    
+                </div><!-- End gameTable div -->
+            </div>
+
+        </div><!-- End gameboard div -->
+
+
+   
+
     
 </body>
-<!-- <object id="original-deck-container" class="card-container"></object>
-<section id="shuffled-deck-container" class="card-container"></section>
-<section id="joker-deck-container" class="card-container"></section>
-<section id="shuffled-joker-deck-container" class="card-container"></section> -->
+<object id="original-deck-container" style= "display:none" class="card-container"></object>
+<object id="shuffled-deck-container" style= "display:none" class="card-container"></object>
+<section id="joker-deck-container" style= "display:none" class="card-container"></section>
+<section id="shuffled-joker-deck-container" style= "display:none" class="card-container"></section>
 
 </html>
