modified:   js/War.js 	modified:   war.html

--- a/war.html
+++ b/war.html
@@ -15,7 +15,7 @@
 
     <div id='header' >
         <h2>I De-Clare War!!</h1>
-        <h3> I declare war is a staple card game that is enjoyed by many. The goal is to take all of your opponents' cards and collect the full deck back. Points can also be gained and it can be played based on rounds instead for a quicker version of the game.</h3>
+        <h3> I declare war is a staple card game that is enjoyed by many. The goal is to take all of your opponents' cards and collect the full deck back.</h3>
     </div>
     <div id="boardwrap">
 
@@ -46,7 +46,7 @@
 
         <!-- </div>
         Player chooses how many rounds
-        <!-- <div id="numRounds">
+        <div id="numRounds">
             <h4>How many rounds</h4>
             <label for="rounds">Number of Rounds:</label>
 
@@ -61,7 +61,7 @@
                 <input type= "radio" id="round" value="30" name = 'radio'>
                 <label for="30">30</label>
          -->
-        <!-- </div> --> -->
+        <!-- </div> -->
 
         <button id="start" onclick="renderBoard()">Start Game!</button>
 
