modified:   war.html

--- a/war.html
+++ b/war.html
@@ -83,7 +83,7 @@
                     <div class="playerDeck"><img src=css/card-library/images/backs/red.svg></div>
                     <div class="playerCard"></div>
                     <div class="middleGround">
-                        <button class="deal" onclick="deal()">PLAY</button><br>
+                        <button class="deal" onclick="deal()">DEAL</button><br>
                         <button class="newGame" onclick="location.reload()">NEW GAME</button>
                     </div><!-- End middleGround div -->
                     <div class="compCard"></div>
