modified:   index.html 	modified:   css/war.css 	modified:   js/War.js

--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
             </div>
 
         </div><!-- End gameboard div -->
-
+        <!-- <div id="warBoard" style=" display:none">
+            <div class="playerWarDeck"></div>
+            <div class="compWarDeck"></div>
+        </div> -->
 
    
 
